fix(native): suppress legacy Unsafe warnings at image build
Vis-Session: 1a3c4192-c9ae-4224-9cbe-cd6bf8dbdf5f